Añado mejoras a la pagina de vendedor y le agrego una opcion al estilo de esa misma pagina

--- a/style.css
+++ b/style.css
@@ -660,3 +660,10 @@ footer .social a:hover {
 .detalle-info .add-to-cart-btn, .detalle-info .btn {
     align-self: flex-start;
 }
+
+/* ================================
+   PANEL VENDEDOR: MOSTRAR/OCULTAR SECCIONES
+================================== */
+.oculto {
+  display: none;
+}
